# PaperPower

./: App.tsx  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_en.md  SECURITY.md  SETUP.md  __init__.py  case_analyzer.py  conftest.py  daemon_process.py  docker-compose.prod.yml  docker-compose.yml  index.html  learning_loop.py  local_ai.py  longterm_memory.py  memory_system.py  model_server.py  nginx.conf  ollama_ai.py  openclaw_adapter.py  package.json  pyproject.toml  requirements-train.txt  requirements.txt  search_engine.py  self_learning.py  start.bat  start_unified.py  start_zhiban.py  tailwind.config.js  vite.config.ts  zhiban_core.py
__tests__/: contentAnalyzer.test.ts  core.test.ts  dataAnalysis.test.ts  documentAI.test.ts  enhancedAI.test.ts  errorHandling.test.ts
agent/: __init__.py  bilingual_agent.py  i18n.py  localized_tools.py  memory_bilingual.py
auth/: __init__.py  auth_service.py  user_manager.py
backend/: api_server.py  api_server_v2.py  image_service.py  rate_limiter.py  semantic_cache.py  task_orchestrator.py
cache/: __init__.py  hybrid_cache.py
components/: AICommandPanel.tsx  AIIcon.tsx  AIThinkingProcess.tsx  AdvancedColorPicker.tsx  ApiKeyManager.tsx  Button.tsx  ChartGenerator.tsx  CompleteFormatToolbar.tsx  DesignIcons.tsx  Dialog.tsx  DocumentCopilot.tsx  EditableChart.tsx  EducationPanel.tsx  ErrorBoundary.tsx  ExcelAIAssistant.tsx  ExcelCellFormat.tsx  ExcelFormulaLibrary.tsx  EyeButton.tsx  EyeIcon.tsx  FormatToolbar.tsx  GenerationProgress.tsx  ImageEditor.tsx  ImagePreview.tsx  InsertImageDialog.tsx  InsertTableDialog.tsx  IntelligentAssistantPanel.tsx  IntelligentChatPanel.tsx  LanguageSwitcher.tsx  LazyImage.tsx  Loading.tsx  MiniAI.tsx  Notification.tsx  PPTAIAssistant.tsx  PPTAnimationSystem.tsx  PPTTemplateSystem.tsx  PageSetup.tsx  ParagraphFormatToolbar.tsx  PivotTable.tsx  PrintPreview.tsx  ScreenshotService.tsx  (+9 more)
config/: apiConfig.ts
configs/: bilingual_7b.yaml  openclaw.json  (+2 more)
sdk/paperpower-py/: README.md  __init__.py  client.py  pyproject.toml
(+278 files in other folders)
