[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zhiban-ai-office"
version = "1.0.0"
description = "智办AI Office智能助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["word*", "excel*", "ppt*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
